<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LoginFragment">

    <LinearLayout
        android:id="@+id/layout_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_onboarding"
            android:textColor="@color/deep_blue"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/secondtitle_onboarding"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_title_login">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_email"
            style="@style/BlueBackgroundTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/helperText_email"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:lines="1"
            tools:hint="@string/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_password"
            style="@style/BlueBackgroundTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_regular"
            app:helperText="@string/helperText_password"
            app:passwordToggleEnabled="true"
            android:lines="1"
            tools:hint="@string/tv_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/helperText_password"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:enabled="false"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/layout_form_login"
        tools:text="@string/btn_login" />

    <LinearLayout
        android:id="@+id/layout_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <TextView
            android:id="@+id/tv_dhaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            tools:text="@string/tv_signup_question" />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/deep_blue"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/tv_signup" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>