...
        app:layout_constraintTop_toBottomOf="@+id/vp_onboarding"
        app:tabBackground="@drawable/indicator"
        app:tabGravity="center"
        app:tabIndicator="@android:color/transparent" />

    <Button
        android:id="@+id/btn_login_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_medium"
...
